# librustzcash

./: Cargo.toml
components/zcash_note_encryption/: CHANGELOG.md  Cargo.toml
components/zcash_note_encryption/src/: lib.rs
zcash_client_backend/proto/: proposal.proto
zcash_client_backend/src/: decrypt.rs  welding_rig.rs
zcash_client_backend/src/data_api/: chain.rs
zcash_primitives/: CHANGELOG.md  Cargo.toml
zcash_primitives/src/sapling/: note_encryption.rs
zcash_primitives/src/transaction/components/: sapling.rs
